infra/k8s/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbsrn-ui
spec:
  type: ClusterIP
  selector:
    app: mbsrn-ui
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
